<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fundo"
    tools:context=".usercontrol.LoginActivity">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="#e9ecef"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:weightSum="2"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/switch_tumbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/logIn"
                    android:text="@string/log_in"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:paddingBottom="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold|normal"
                    android:background="@drawable/switch_trcks"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/singUp"
                    android:text="@string/sign_up"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:paddingBottom="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/RedColor"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold|normal"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                </LinearLayout>
            <LinearLayout
                android:id="@+id/logInLayout"
                android:padding="25dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/email"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textEmailAddress"
                        android:id="@+id/eMail"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/password"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/passwords"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forgetP"
                    android:textSize="11sp"
                    android:text="@string/password_forgot"
                    android:textAlignment="textEnd"
                    android:textStyle="normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/singUpLayout"
                android:padding="25dp"
                android:visibility="gone"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/email"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textEmailAddress"
                        android:id="@+id/eMailsing"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/password"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/passwordssing"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/password_confirm"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/passwords01sing"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_logIn"
                android:text="@string/log_in"
                android:textSize="17sp"
                android:textAllCaps="false"
                android:elevation="15dp"
                android:gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/textColor"
                android:layout_gravity="center"
                app:shapeAppearanceOverlay="@style/Button5"
                app:backgroundTint="@color/RedColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/or"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textStyle="normal"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/facebook_logo"
                    android:layout_margin="10dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/facebook" />

                <ImageView
                    android:src="@drawable/google_logo"
                    android:layout_margin="10dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/gmail" />

                <ImageView
                    android:src="@drawable/twitter_logo"
                    android:layout_margin="10dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/twitter" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>